update mybankfront: add dto, remove stub